feat: ansible development

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-TF_VAR_env=dev
+ENV=dev
+TF_VAR_env=$ENV
 TF_PROXMOX_URL=https://hostname.domain.es:8006/api2/json
 TF_PROXMOX_TOKEN_ID=terraform@pve!terraform-api-key
 TF_PROXMOX_SECRET=*****************************
