feat: dynamic inv and start provision

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ PKR_VAR_proxmox_url=$TF_VAR_proxmox_url
 PKR_VAR_proxmox_node=proxmox_node
 PKR_VAR_proxmox_api_token_id=$TF_VAR_proxmox_api_token_id
 PKR_VAR_proxmox_api_secret=$TF_VAR_proxmox_api_secret
+
+PYTHONWARNINGS="ignore"
+ANSIBLE_CONFIG="ansible.cfg"
