--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -96,7 +96,7 @@ nocows=True
 ;cache_plugins=/home/yuki/.ansible/plugins/cache:/usr/share/ansible/plugins/cache
 
 # (pathspec) Colon-separated paths in which Ansible will search for Callback Plugins.
-;callback_plugins=/home/yuki/.ansible/plugins/callback:/usr/share/ansible/plugins/callback
+callback_plugins=/home/yuki/.ansible/plugins/callback:/usr/share/ansible/plugins/callback:./plugins/callback
 
 # (pathspec) Colon-separated paths in which Ansible will search for Cliconf Plugins.
 ;cliconf_plugins=/home/yuki/.ansible/plugins/cliconf:/usr/share/ansible/plugins/cliconf
@@ -231,7 +231,7 @@ roles_path=/home/yuki/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
 # (string) Set the main callback used to display Ansible output. You can only have one at a time.
 # You can have many other callbacks, but just one can be in charge of stdout.
 # See :ref:`callback_plugins` for a list of available options.
-;stdout_callback=default
+stdout_callback=protect_data
 
 # (string) Set the default strategy used for plays.
 strategy=linear
@@ -704,3 +704,5 @@ strategy=linear
 # (list) default list of tags to skip in your plays, has precedence over Run Tags
 ;skip=
 
+[callback_protect_data]
+sensitive_keywords = vault,pwd,password,ssh_priv_key_file
