--- a/variables/example/k8s.yml
+++ b/variables/example/k8s.yml
@@ -2,6 +2,8 @@ k8s:
   cluster: cluster_name
   version: 1.34.0
   upgrade: false
+  pod_network_cidr: "10.100.0.0/16"
+  svc_network_cidr: "172.100.0.0/16"
   net:
     cidr: 24
     gw: 192.168.1.1
@@ -11,8 +13,8 @@ k8s:
     searchdomain: example.es
   node:
     controlplane:
-      - name: dev-k8s-m01.example.es
-        hypervisor: proxmox
+      - name: k8s-m01
+        hypervisor: proxmox # specific hypervisor name, optional
         ip: 192.168.1.10
         cpu: 2
         ram: 4096
@@ -21,7 +23,7 @@ k8s:
           - 20 # /var
           - 10 # /tmp
     worker:
-      - name: dev-k8s-w01.example.es
+      - name: dk8s-w01
         hypervisor: proxmox
         ip: 192.168.1.20
         cpu: 2
