--- a/variables/example/proxmox.yml
+++ b/variables/example/proxmox.yml
@@ -1,3 +1,5 @@
+ssh_priv_key_file: "~/.ssh/id_ed25519"
+ssh_pub_key_file: "~/.ssh/id_ed25519.pub"
 proxmox:
   storage_name: zfs
   net_bridge: vmbr0
