--- a/ansible/roles/yukics.certs/tasks/base.yml
+++ b/ansible/roles/yukics.certs/tasks/base.yml
@@ -1,13 +1,7 @@
 - name: Install dependencies
+  become: true
   ansible.builtin.apt:
     name:
       - openssl
     state: present
     update_cache: true
-
-- name: Create directory for certs
-  ansible.builtin.file:
-    path: "{{ certs_path }}"
-    recurse: true
-    state: directory
-    mode: '0777'
