--- a/ansible/roles/yukics.certs/tasks/ca.yml
+++ b/ansible/roles/yukics.certs/tasks/ca.yml
@@ -1,9 +1,18 @@
+- name: Create directory for certs
+  become: false
+  ansible.builtin.file:
+    path: "{{ certs_path }}"
+    state: directory
+    mode: '0777'
+
 - name: Check if CA certificate already exists
+  become: false
   ansible.builtin.stat:
     path: "{{ certs_path }}/ca.crt"
   register: ca_cert_stat
 
 - name: Generate CA certificate and key
+  become: false
   ansible.builtin.shell: |
     openssl req -nodes -new -x509 -batch \
     -passout pass:{{ certs_pass }} \
